added a form for a potential new cookie stand

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+
+  <fieldset>
+      <legend> New Cookie Stand </legend>
+        <label> Name: <br/>
+          <input type = "text" name = "Name" /> </label><br/>
+        <label> Email: <br/>
+          <input type = "text" name = "Email" /> </label><br/>
+        <label> Phone: <br/>
+          <input type = "text" name = "Phone" /> </label><br/>
+        <label> City: <br/>
+          <input type = "text" name = "City" /> </label><br/>
+  </fieldset>
+  
+  
+  <img src = "..."
   
 </body>
     <script src="./app.js"></script>
